created a login form

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
     0 32px 64px -48px rgba(0, 0, 0, 0.5);
 }
 
-/* signup form css code */
+/* signup and login forms css code */
 .form {
     padding: 25px 30px;
 }
