--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ body {
     margin: 20px 0;
 }
 .form form .error-txt {
+    display: none;
     color: #721c24;
     background: #f8d7da;
     padding: 8px 10px;
